add meta icon and update desc and title

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gianfranco Palumbo ― Full Stack Developer and Digital Strategist</title>
-    <meta name="description" content="Full Stack Developer and Digital Strategist based in Dublin Ireland">
+    <title>Gianfranco Palumbo ― Developer and Digital Strategist</title>
+    <meta name="description" content="Italian and Ecuadorian Full Stack Developer and Business Partner">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:title" content="Gianfranco Palumbo ― Developer and Digital Strategist" />
+    <meta property="og:description" content="Italian and Ecuadorian Full Stack Developer and Business Partner" />
+    <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <style type="text/css">
