--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="section">
       <div class="section__inner">
         <header class="section__header">I'm Gianfranco</header>
-        <div><a href="https://github.com/gianpaj" target="_blank">Full Stack Developer</a> and <a href="https://www.thinkful.com" target="_blank">Mentor</a></div>
+        <!--<div><a href="https://github.com/gianpaj" target="_blank">Full Stack Developer</a> and <a href="https://www.thinkful.com" target="_blank">Mentor</a></div>-->
         <div>Digital Strategist and Business Owner at <a href="http://www.dgitup.com" title="Web Agency and Digital Consultancy Company" target="__blank">Dgitup.com</a></div>
         <div>Amateur <a href="http://soundcloud.com/gianpaj" target="_blank">House and Techno DJ</a></div>
       </div>
