--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gianfranco Palumbo ― Developer and Digital Strategist</title>
+    <title>Gianfranco Palumbo ― Mobile and App Developer</title>
     <meta name="description" content="Italian and Ecuadorian Full Stack Developer and Business Partner">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -65,7 +65,7 @@
         <header class="section__header">I'm Gianfranco</header>
         <div>Web and Mobile App Developer and Co-Founder at <a href="https://givebox.xyz" title="Givebox - Give Old Things Away Locally" target="_blank">Givebox.xyz</a></div>
         <!--<div>Digital Strategist and Business Owner at <a href="http://www.dgitup.com" title="Web Agency and Digital Consultancy Company" target="__blank">Dgitup.com</a></div>-->
-        <div>Amateur <a href="http://soundcloud.com/gianpaj" target="_blank">House and Techno DJ</a></div>
+        <div>Amateur <a href="https://soundcloud.com/gianpaj" target="_blank">House</a> and <a href="https://www.mixcloud.com/gianpaj/" target="_blank">Techno</a> DJ</div>
       </div>
     </section>
 
