add instagram link and Social Profile Links (structure data)

--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
         visibility: hidden;
       }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "name": "Gianfranco Palumbo",
+      "url": "http://gian.xyz",
+      "sameAs": [
+        "https://www.facebook.com/gianpaj",
+        "https://www.instagram.com/gianpaj",
+        "https://twitter.com/gianpaj",
+        "https://github.com/gianpaj",
+        "https://www.linkedin.com/in/gianpaj"
+      ]
+    }
+    </script>
   </head>
   <body>
     <section class="section">
@@ -80,9 +95,10 @@
     <section class="section">
       <div class="section__inner">
         <header class="section__header">Links</header>
-        <div><a href="http://www.twitter.com/gianpaj" target="_blank">Twitter</a></div>
-        <div><a href="http://www.github.com/gianpaj" target="_blank">GitHub</a></div>
-        <div><a href="https://ie.linkedin.com/in/gianpaj" target="_blank">LinkedIn</a></div>
+        <div><a href="https://twitter.com/gianpaj" target="_blank">Twitter</a></div>
+        <div><a href="http://www.instagram.com/gianpaj" target="_blank">Instagram</a></div>
+        <div><a href="https://github.com/gianpaj" target="_blank">GitHub</a></div>
+        <div><a href="https://www.linkedin.com/in/gianpaj" target="_blank">LinkedIn</a></div>
       </div>
     </section>
     <section class="section">
