add FB messenger, Medium and update info

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gianfranco Palumbo ― Mobile and App Developer</title>
-    <meta name="description" content="Italian and Ecuadorian Full Stack Developer and Business Partner">
+    <title>Gianfranco Palumbo</title>
+    <meta name="description" content="Full Stack Developer and Tinkerer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="Gianfranco Palumbo ― Developer and Digital Strategist" />
-    <meta property="og:description" content="Italian and Ecuadorian Full Stack Developer and Business Partner" />
+    <meta property="og:description" content="Full Stack Developer and Tinkerer" />
     <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -44,6 +44,12 @@
         margin: 2rem;
       }
 
+      @media screen and (max-width: 480px) {
+        .section {
+          margin: 1rem 0;
+        }
+      }
+
       .section__header {
         font-weight: bold;
       }
@@ -63,7 +69,7 @@
       "@context": "http://schema.org",
       "@type": "Person",
       "name": "Gianfranco Palumbo",
-      "url": "http://gian.xyz",
+      "url": "https://gian.xyz",
       "sameAs": [
         "https://www.facebook.com/gianpaj",
         "https://www.instagram.com/gianpaj",
@@ -77,10 +83,10 @@
   <body>
     <section class="section">
       <div class="section__inner">
-        <header class="section__header">I'm Gianfranco</header>
-        <div>Web and Mobile App Developer and Co-Founder at <a href="https://givebox.xyz" title="Givebox - Give Old Things Away Locally" target="_blank">Givebox.xyz</a></div>
+        <header class="section__header">Hi, I'm Gianfranco</header>
+        <div>Writer of code and co-founder at <a href="https://givebox.xyz" title="Givebox - Give Old Things Away Locally" target="_blank">Givebox.xyz</a></div>
         <!--<div>Digital Strategist and Business Owner at <a href="http://www.dgitup.com" title="Web Agency and Digital Consultancy Company" target="__blank">Dgitup.com</a></div>-->
-        <div>Amateur <a href="https://soundcloud.com/gianpaj" target="_blank">House</a> and <a href="https://www.mixcloud.com/gianpaj/" target="_blank">Techno</a> DJ</div>
+        <!-- <div>Amateur <a href="https://soundcloud.com/gianpaj" target="_blank">House</a> and <a href="https://www.mixcloud.com/gianpaj/" target="_blank">Techno</a> DJ</div> -->
       </div>
     </section>
 
@@ -94,16 +100,18 @@
 
     <section class="section">
       <div class="section__inner">
-        <header class="section__header">Links</header>
+        <header class="section__header">Profiles</header>
+        <div><a href="https://medium.com/@gianpaj" target="_blank">Medium</a></div>
         <div><a href="https://twitter.com/gianpaj" target="_blank">Twitter</a></div>
-        <div><a href="http://www.instagram.com/gianpaj" target="_blank">Instagram</a></div>
+        <div><a href="https://www.instagram.com/gianpaj/" target="_blank">Instagram</a></div>
         <div><a href="https://github.com/gianpaj" target="_blank">GitHub</a></div>
         <div><a href="https://www.linkedin.com/in/gianpaj" target="_blank">LinkedIn</a></div>
       </div>
     </section>
     <section class="section">
       <div class="section__inner">
-        <header class="section__header">Email</header>
+        <header class="section__header">Contact</header>
+        <div><a href="https://m.me/gianpaj" title="Facebook Messenger" target="_blank">Send me a message</a></div>
         <div><a href="http://www.google.com/recaptcha/mailhide/d?k=01KNYcCfCZ8eKrC6Nd8Ios2Q==&amp;c=CvXkAs0vch5kG7iO8L-1SaKW_MOXpmZJE1xCFWMqN78=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501KNYcCfCZ8eKrC6Nd8Ios2Q\75\75\46c\75CvXkAs0vch5kG7iO8L-1SaKW_MOXpmZJE1xCFWMqN78\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">g...</a>@gmail.com</div>
       </div>
     </section>
