--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Full Stack Developer and Tinkerer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="Gianfranco Palumbo ― Co-founder and CTO at Onova" />
-    <meta property="og:description" content="Full Stack Developer and Tinkerer" />
+    <meta property="og:title" content="Gianfranco Palumbo ― Software Develper and Cofounder at Onova" />
+    <meta property="og:description" content="Full Stack JavaScript Developer and Tinkerer" />
     <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -84,7 +84,7 @@
     <section class="section">
       <div class="section__inner">
         <header class="section__header">Hi, I'm Gianfranco</header>
-        <div>Co-founder and CTO at <a href="https://onova.co" title="Onova - Buy and sell clothes from your phone" target="_blank">Onova</a></div>
+        <div>Software developer and cofounder at <a href="https://onova.co" title="Onova - a Social Marketplace for second-hand clothes" target="_blank">Onova</a> - a Social Marketplace for second-hand clothes</div>
         <!-- <div>Writer of code and co-founder at <a href="https://givebox.xyz" title="Givebox - Give Old Things Away Locally" target="_blank">Givebox.xyz</a></div> -->
         <!--<div>Digital Strategist and Business Owner at <a href="http://www.dgitup.com" title="Web Agency and Digital Consultancy Company" target="__blank">Dgitup.com</a></div>-->
         <!-- <div>Amateur <a href="https://soundcloud.com/gianpaj" target="_blank">House</a> and <a href="https://www.mixcloud.com/gianpaj/" target="_blank">Techno</a> DJ</div> -->
