--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Full Stack Developer and Tinkerer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="Gianfranco Palumbo ― Software Develper and Cofounder at Onova" />
-    <meta property="og:description" content="Full Stack JavaScript Developer and Tinkerer" />
+    <meta property="og:title" content="Gianfranco Palumbo ― Software develper and cofounder at Onova" />
+    <meta property="og:description" content="Full stack JavaScript developer and tinkerer" />
     <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
