--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Gianfranco Palumbo</title>
-    <meta name="description" content="Full Stack Developer and Tinkerer">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Full Stack Developer and Tinkerer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta property="og:title" content="Gianfranco Palumbo ― Software develper and cofounder at Onova" />
     <meta property="og:description" content="Full stack JavaScript developer and tinkerer" />
     <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js"></script>
+    <!-- prettier-ignore -->
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <style type="text/css">
       * {
@@ -25,7 +26,7 @@
       body {
         background: #f4f4f4;
         color: #3a3a3a;
-        font-family: "adelle",serif;
+        font-family: 'adelle', serif;
         font-size: 1rem;
         font-style: normal;
         font-weight: 400;
@@ -35,7 +36,7 @@
       }
 
       a {
-        color: #4972FF;
+        color: #4972ff;
         font-weight: 500;
         text-decoration: underline;
       }
@@ -65,26 +66,32 @@
       }
     </style>
     <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "Person",
-      "name": "Gianfranco Palumbo",
-      "url": "https://gian.xyz",
-      "sameAs": [
-        "https://www.facebook.com/gianpaj",
-        "https://www.instagram.com/gianpaj",
-        "https://twitter.com/gianpaj",
-        "https://github.com/gianpaj",
-        "https://www.linkedin.com/in/gianpaj"
-      ]
-    }
+      {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Gianfranco Palumbo",
+        "url": "https://gian.xyz",
+        "sameAs": [
+          "https://www.facebook.com/gianpaj",
+          "https://www.instagram.com/gianpaj",
+          "https://twitter.com/gianpaj",
+          "https://github.com/gianpaj",
+          "https://www.linkedin.com/in/gianpaj"
+        ]
+      }
     </script>
   </head>
   <body>
     <section class="section">
       <div class="section__inner">
         <header class="section__header">Hi, I'm Gianfranco</header>
-        <div>Software developer and cofounder at <a href="https://onova.co" title="Onova - a Social Marketplace for second-hand clothes" target="_blank">Onova</a> - a Social Marketplace for second-hand clothes</div>
+        <div>
+          Software developer and cofounder at
+          <a href="https://onova.co" title="Onova - a Social Marketplace for second-hand clothes" target="_blank"
+            >Onova</a
+          >
+          - a Social Marketplace for second-hand clothes
+        </div>
         <!-- <div>Writer of code and co-founder at <a href="https://givebox.xyz" title="Givebox - Give Old Things Away Locally" target="_blank">Givebox.xyz</a></div> -->
         <!--<div>Digital Strategist and Business Owner at <a href="http://www.dgitup.com" title="Web Agency and Digital Consultancy Company" target="__blank">Dgitup.com</a></div>-->
         <!-- <div>Amateur <a href="https://soundcloud.com/gianpaj" target="_blank">House</a> and <a href="https://www.mixcloud.com/gianpaj/" target="_blank">Techno</a> DJ</div> -->
