Onova - A Social Marketplace for Ukrainian brands

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Full Stack Developer and Tinkerer" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Gianfranco Palumbo ― Software develper and cofounder at Onova" />
+    <meta property="og:title" content="Gianfranco Palumbo ― Software develper and co-founder at Onova" />
     <meta property="og:description" content="Full stack JavaScript developer and tinkerer" />
     <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js"></script>
@@ -84,13 +84,11 @@
   <body>
     <section class="section">
       <div class="section__inner">
-        <header class="section__header">Hi, I'm Gianfranco</header>
+        <header class="section__header">Hi, I'm Gianfranco.</header>
         <div>
-          Software developer and cofounder at
-          <a href="https://onova.co" title="Onova - a Social Marketplace for second-hand clothes" target="_blank"
-            >Onova</a
-          >
-          - a Social Marketplace for second-hand clothes
+          I'm a Software developer and co-founder at
+          <a href="https://onova.co" title="Onova - A Social Marketplace for Ukrainian brands" target="_blank">Onova</a>
+          - A Social Marketplace for Ukrainian brands
         </div>
         <!-- <div>Writer of code and co-founder at <a href="https://givebox.xyz" title="Givebox - Give Old Things Away Locally" target="_blank">Givebox.xyz</a></div> -->
         <!--<div>Digital Strategist and Business Owner at <a href="http://www.dgitup.com" title="Web Agency and Digital Consultancy Company" target="__blank">Dgitup.com</a></div>-->
@@ -98,20 +96,12 @@
       </div>
     </section>
 
-    <!-- <section class="section">
-      <div class="section__inner">
-        <header class="section__header">Tips</header>
-        <div><a href="https://medium.com/@mdsisto/the-trick-with-bem-8fac70d4cd59" target="_blank">The trick with BEM...</a></div>
-        <div><a href="https://medium.com/@mdsisto/quick-tip-nesting-related-properties-for-more-readable-css-4b53ad884c46" target="_blank">Nest related properties for more readable CSS</a></div>
-      </div>
-    </section> -->
-
     <section class="section">
       <div class="section__inner">
         <header class="section__header">Profiles</header>
         <!-- <div><a href="https://medium.com/@gianpaj" target="_blank">Medium</a></div> -->
         <div><a href="https://twitter.com/gianpaj" target="_blank">Twitter</a></div>
-        <div><a href="https://www.instagram.com/gianpaj/" target="_blank">Instagram</a></div>
+        <div><a href="https://www.instagram.com/gianpaj" target="_blank">Instagram</a></div>
         <div><a href="https://github.com/gianpaj" target="_blank">GitHub</a></div>
         <div><a href="https://www.linkedin.com/in/gianpaj" target="_blank">LinkedIn</a></div>
       </div>
@@ -119,7 +109,6 @@
     <section class="section">
       <div class="section__inner">
         <header class="section__header">Contact</header>
-        <!-- <div><a href="https://m.me/gianpaj" title="Facebook Messenger" target="_blank">Send me a message</a></div> -->
         <a href="mailto:hi@gian.xyz" title="Email me at hi@gian.xyz">hi@gian.xyz</a>
       </div>
     </section>
