--- a/index.html
+++ b/index.html
@@ -87,8 +87,13 @@
         <header class="section__header">Hi, I'm Gianfranco.</header>
         <div>
           I'm a Software developer and co-founder at
-          <a href="https://onova.co" title="Onova - A Social Marketplace for Ukrainian brands" target="_blank">Onova</a>
-          - A Social Marketplace for Ukrainian brands
+          <a
+            href="https://onova.co"
+            title="Onova - A Marketplace and E-commerce platform for Ukrainian brands"
+            target="_blank"
+            >Onova</a
+          >
+          - A Marketplace and E-commerce platform for Ukrainian brands
         </div>
         <!-- <div>Writer of code and co-founder at <a href="https://givebox.xyz" title="Givebox - Give Old Things Away Locally" target="_blank">Givebox.xyz</a></div> -->
         <!--<div>Digital Strategist and Business Owner at <a href="http://www.dgitup.com" title="Web Agency and Digital Consultancy Company" target="__blank">Dgitup.com</a></div>-->
