--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Gianfranco Palumbo ― Software develper and co-founder at Onova" />
     <meta property="og:description" content="Full stack JavaScript developer and tinkerer" />
     <meta property="og:image" content="/icon-192x192.png" />
-    <script src="https://use.typekit.net/uvb0pir.js"></script>
+    <script src="https://use.typekit.net/uvb0pir.js" crossorigin></script>
     <!-- prettier-ignore -->
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <style type="text/css">
@@ -26,7 +26,7 @@
       body {
         background: #f4f4f4;
         color: #3a3a3a;
-        font-family: 'adelle', serif;
+        font-family: "adelle", serif;
         font-size: 1rem;
         font-style: normal;
         font-weight: 400;
@@ -82,7 +82,7 @@
     </script>
   </head>
   <body>
-    <section class="section">
+    <section class="section" role="main">
       <div class="section__inner">
         <header class="section__header">Hi, I'm Gianfranco.</header>
         <div>
@@ -91,25 +91,34 @@
             href="https://onova.co"
             title="Onova - A Marketplace and E-commerce platform for Ukrainian brands"
             target="_blank"
+            rel="noopener noreferrer"
             >Onova</a
           >
           - A Marketplace and E-commerce platform for Ukrainian brands
         </div>
-        <!-- <div>Writer of code and co-founder at <a href="https://givebox.xyz" title="Givebox - Give Old Things Away Locally" target="_blank">Givebox.xyz</a></div> -->
-        <!--<div>Digital Strategist and Business Owner at <a href="http://www.dgitup.com" title="Web Agency and Digital Consultancy Company" target="__blank">Dgitup.com</a></div>-->
-        <!-- <div>Amateur <a href="https://soundcloud.com/gianpaj" target="_blank">House</a> and <a href="https://www.mixcloud.com/gianpaj/" target="_blank">Techno</a> DJ</div> -->
       </div>
     </section>
 
     <section class="section">
       <div class="section__inner">
         <header class="section__header">Profiles</header>
-        <!-- <div><a href="https://medium.com/@gianpaj" target="_blank">Medium</a></div> -->
-        <div><a href="https://www.goodreads.com/user/show/10470860-gianfranco" target="_blank">Goodreads</a></div>
-        <div><a href="https://twitter.com/gianpaj" target="_blank">Twitter</a></div>
-        <div><a href="https://www.instagram.com/gianpaj" target="_blank">Instagram</a></div>
-        <div><a href="https://github.com/gianpaj" target="_blank">GitHub</a></div>
-        <div><a href="https://www.linkedin.com/in/gianpaj" target="_blank">LinkedIn</a></div>
+        <div>
+          <a rel="noopener noreferrer" href="https://www.goodreads.com/user/show/10470860-gianfranco" target="_blank"
+            >Goodreads</a
+          >
+        </div>
+        <div>
+          <a rel="noopener noreferrer" href="https://twitter.com/gianpaj" target="_blank">Twitter</a>
+        </div>
+        <div>
+          <a rel="noopener noreferrer" href="https://www.instagram.com/gianpaj" target="_blank">Instagram</a>
+        </div>
+        <div>
+          <a rel="noopener noreferrer" href="https://github.com/gianpaj" target="_blank">GitHub</a>
+        </div>
+        <div>
+          <a rel="noopener noreferrer" href="https://www.linkedin.com/in/gianpaj" target="_blank">LinkedIn</a>
+        </div>
       </div>
     </section>
     <section class="section">
