update job and description

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Gianfranco Palumbo</title>
-    <meta name="description" content="Full Stack Developer and Tinkerer" />
+    <meta name="description" content="Born in Italy, lived in Ecuador & Ukraine – living in in Ireland" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Gianfranco Palumbo ― Software develper and co-founder at Onova" />
-    <meta property="og:description" content="Full stack JavaScript developer and tinkerer" />
+    <meta property="og:title" content="Gianfranco Palumbo ― Product Manager and Software Developer" />
+    <meta property="og:description" content="Born in Italy, lived in Ecuador & Ukraine – living in in Ireland" />
     <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js" crossorigin></script>
     <!-- prettier-ignore -->
@@ -70,7 +70,7 @@
         "@context": "http://schema.org",
         "@type": "Person",
         "name": "Gianfranco Palumbo",
-        "url": "https://gian.xyz",
+        "url": "https://gian.cool",
         "sameAs": [
           "https://www.facebook.com/gianpaj",
           "https://www.instagram.com/gianpaj",
@@ -86,15 +86,15 @@
       <div class="section__inner">
         <header class="section__header">Hi, I'm Gianfranco.</header>
         <div>
-          I'm a Software developer and co-founder at
+          I'm a Product Manager at
           <a
-            href="https://onova.co"
-            title="Onova - A Marketplace and E-commerce platform for Ukrainian brands"
+            href="https://cartrawler.com"
+            title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
             target="_blank"
             rel="noopener noreferrer"
-            >Onova</a
+            >CarTrawler</a
           >
-          - A Marketplace and E-commerce platform for Ukrainian brands
+          - a B2B Car Rental & Mobility Marketplace
         </div>
       </div>
     </section>
@@ -121,12 +121,12 @@
         </div>
       </div>
     </section>
-    <section class="section">
+    <section class="section"><!-- 
       <div class="section__inner">
         <header class="section__header">Contact</header>
-        <a href="mailto:hi@gian.xyz" title="Email me at hi@gian.xyz">hi@gian.xyz</a>
+        <a href="mailto:hi@gian.cool" title="Email me at hi@gian.cool">hi@gian.cool</a>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
 <!-- inspired by http://sis.to/ -->
