fix html and typo in description

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Gianfranco Palumbo</title>
-    <meta name="description" content="Born in Italy, lived in Ecuador & Ukraine – living in in Ireland" />
+    <meta name="description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta property="og:title" content="Gianfranco Palumbo ― Product Manager and Software Developer" />
-    <meta property="og:description" content="Born in Italy, lived in Ecuador & Ukraine – living in in Ireland" />
+    <meta property="og:description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
     <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js" crossorigin></script>
     <!-- prettier-ignore -->
@@ -92,8 +92,9 @@
             title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
             target="_blank"
             rel="noopener noreferrer"
-            >CarTrawler</a
           >
+            CarTrawler
+          </a>
           - a B2B Car Rental & Mobility Marketplace
         </div>
       </div>
@@ -103,9 +104,9 @@
       <div class="section__inner">
         <header class="section__header">Profiles</header>
         <div>
-          <a rel="noopener noreferrer" href="https://www.goodreads.com/user/show/10470860-gianfranco" target="_blank"
-            >Goodreads</a
-          >
+          <a rel="noopener noreferrer" href="https://www.goodreads.com/user/show/10470860-gianfranco" target="_blank">
+            Goodreads
+          </a>
         </div>
         <div>
           <a rel="noopener noreferrer" href="https://twitter.com/gianpaj" target="_blank">Twitter</a>
@@ -121,7 +122,7 @@
         </div>
       </div>
     </section>
-    <section class="section"><!-- 
+    <!-- <section class="section">
       <div class="section__inner">
         <header class="section__header">Contact</header>
         <a href="mailto:hi@gian.cool" title="Email me at hi@gian.cool">hi@gian.cool</a>
