add Cloudflare Web Analytics JS snippet

--- a/index.html
+++ b/index.html
@@ -129,5 +129,12 @@
       </div>
     </section> -->
   </body>
+  <!-- Cloudflare Web Analytics -->
+  <script
+    defer
+    src="https://static.cloudflareinsights.com/beacon.min.js"
+    data-cf-beacon='{"token": "1ac762984e2048fa979ad6c172ffc6d5"}'
+  ></script>
+  <!-- End Cloudflare Web Analytics -->
 </html>
 <!-- inspired by http://sis.to/ -->
