--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Gianfranco Palumbo ― Product Manager and Software Developer" />
+    <meta property="og:title" content="Gianfranco Palumbo ― Technical Product Manager and Software Developer" />
     <meta property="og:description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
     <meta property="og:image" content="/icon-192x192.png" />
     <script src="https://use.typekit.net/uvb0pir.js" crossorigin></script>
@@ -86,16 +86,12 @@
       <div class="section__inner">
         <header class="section__header">Hi, I'm Gianfranco.</header>
         <div>
-          I'm a Product Manager at
-          <a
+          I'm a Technical Product Manager at <a
             href="https://cartrawler.com"
             title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
             target="_blank"
             rel="noopener noreferrer"
-          >
-            CarTrawler
-          </a>
-          - a B2B Car Rental & Mobility Marketplace
+          >CarTrawler</a> - a B2B Car Rental & Mobility Marketplace
         </div>
       </div>
     </section>
@@ -137,4 +133,4 @@
   ></script>
   <!-- End Cloudflare Web Analytics -->
 </html>
-<!-- inspired by http://sis.to/ -->
+<!-- inspired by http://sis.to -->
