--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <meta property="og:title" content="Gianfranco Palumbo ― Technical Product Manager and Software Developer" />
     <meta property="og:description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
     <meta property="og:image" content="/icon-192x192.png" />
-    <script src="https://use.typekit.net/uvb0pir.js" crossorigin></script>
-    <!-- prettier-ignore -->
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <style type="text/css">
       * {
         box-sizing: border-box;
@@ -26,7 +23,9 @@
       body {
         background: #f4f4f4;
         color: #3a3a3a;
-        font-family: "adelle", serif;
+        font-family: -apple-system, system-ui, BlinkMacSystemFont, 
+             'Segoe UI', Roboto, 'Helvetica Neue', 
+             Ubuntu, Arial, sans-serif;
         font-size: 1rem;
         font-style: normal;
         font-weight: 400;
