--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Gianfranco Palumbo ― Technical Product Manager and Software Developer" />
+    <meta property="og:title" content="Gianfranco Palumbo ― Software Engineer and former Co-founder" />
     <meta property="og:description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
@@ -85,7 +85,7 @@
       <div class="section__inner">
         <header class="section__header">Hi, I'm Gianfranco.</header>
         <div>
-          I'm a Technical Product Manager at <a
+          I work as a Software Engineer at <a
             href="https://cartrawler.com"
             title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
             target="_blank"
