--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Gianfranco Palumbo</title>
-    <meta name="description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
+    <meta name="description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Malaga, Spain" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta property="og:title" content="Gianfranco Palumbo ― Software Engineer and former Co-founder" />
-    <meta property="og:description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Ireland" />
+    <meta property="og:description" content="Born in Italy, lived in Ecuador & Ukraine, now living in Malaga, Spain" />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
       * {
@@ -84,6 +84,7 @@
     <section class="section" role="main">
       <div class="section__inner">
         <header class="section__header">Hi, I'm Gianfranco.</header>
+        <div>Living in Magala, Spain</div>
         <div>
           I work as a Software Engineer at <a
             href="https://cartrawler.com"
