--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Born in Italy, lived in Ecuador, Ukraine, Ireland, and now living in Malaga, Spain" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Gianfranco Palumbo ― Software Engineer and former Co-founder" />
+    <meta property="og:title" content="Gianfranco Palumbo ― React Native Developer - Starting a coding school in Malaga - Escuela.dev" />
     <meta property="og:description" content="Born in Italy, lived in Ecuador, Ukraine, Ireland, and now living in Malaga, Spain" />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
@@ -83,10 +83,11 @@
   <body>
     <section class="section" role="main">
       <div class="section__inner">
-        <header class="section__header">Hi, I'm Gianfranco.</header>
+        <header class="section__header">Hola 👋, I'm Gianfranco.</header>
         <div>Living in Magala, Spain</div>
+        <div>Starting a coding school - <a href="https://escuela.dev">Escuela.dev</a>
         <div>
-          I work as a Software Engineer at <a
+          I work as a React Native Developer at <a
             href="https://cartrawler.com"
             title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
             target="_blank"
