--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Born in Italy, lived in Ecuador, Ukraine, Ireland, and now living in Malaga, Spain" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Gianfranco Palumbo ― React Native Developer - Starting a coding school in Malaga - Escuela.dev" />
+    <meta property="og:title" content="Gianfranco Palumbo ― Senior Front-end Engineer and Educator" />
     <meta property="og:description" content="Born in Italy, lived in Ecuador, Ukraine, Ireland, and now living in Malaga, Spain" />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
@@ -85,9 +85,9 @@
       <div class="section__inner">
         <header class="section__header">Hola 👋, I'm Gianfranco.</header>
         <div>Living in Magala, Spain</div>
-        <div>Starting a coding school - <a href="https://escuela.dev">Escuela.dev</a>
+<!--         <div>Starting a coding school - <a href="https://escuela.dev">Escuela.dev</a> -->
         <div>
-          I work as a React Native Developer at <a
+          I work as a Senior Front-end Engineer at <a
             href="https://cartrawler.com"
             title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
             target="_blank"
