--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Gianfranco Palumbo</title>
-    <meta name="description" content="Born in Italy, lived in Ecuador, Ukraine, Ireland, and now living in Malaga, Spain" />
+    <meta name="description" content="React, Next.js, TypeScript, Python, AWS and learning AI" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Gianfranco Palumbo ― Senior Front-end Engineer and Educator" />
-    <meta property="og:description" content="Born in Italy, lived in Ecuador, Ukraine, Ireland, and now living in Malaga, Spain" />
+    <meta property="og:title" content="Gianfranco Palumbo ― Sofware Engineer" />
+    <meta property="og:description" content="React, Next.js, Redux, TypeScript, Python, AWS  and learning AI" />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
       * {
@@ -71,7 +71,7 @@
         "name": "Gianfranco Palumbo",
         "url": "https://gian.cool",
         "sameAs": [
-          "https://www.facebook.com/gianpaj",
+          "https://www.threads.net/@gianpaj",
           "https://www.instagram.com/gianpaj",
           "https://twitter.com/gianpaj",
           "https://github.com/gianpaj",
@@ -87,7 +87,7 @@
         <div>Living in Magala, Spain</div>
 <!--         <div>Starting a coding school - <a href="https://escuela.dev">Escuela.dev</a> -->
         <div>
-          I work as a Senior Front-end Engineer at <a
+          I work as a Sofware Developer at <a
             href="https://cartrawler.com"
             title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
             target="_blank"
@@ -104,6 +104,9 @@
           <a rel="noopener noreferrer" href="https://www.goodreads.com/user/show/10470860-gianfranco" target="_blank">
             Goodreads
           </a>
+        </div>
+        <div>
+          <a rel="noopener noreferrer" href="https://www.threads.net/@gianpaj" target="_blank">Threads</a>
         </div>
         <div>
           <a rel="noopener noreferrer" href="https://twitter.com/gianpaj" target="_blank">Twitter</a>
