--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Gianfranco Palumbo</title>
-    <meta name="description" content="React, Next.js, TypeScript, Python, AWS and learning AI" />
+    <meta name="description" content="React, Next.js, TypeScript, Python, AWS and learning about AI/ML" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta property="og:title" content="Gianfranco Palumbo ― Sofware Engineer" />
-    <meta property="og:description" content="React, Next.js, Redux, TypeScript, Python, AWS  and learning AI" />
+    <meta property="og:description" content="React, Next.js, Redux, TypeScript, Python, AWS  and learning about AI/ML" />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
       * {
