--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Gianfranco Palumbo</title>
-    <meta name="description" content="React, Next.js, TypeScript, Python, AWS and learning about AI/ML" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Gianfranco Palumbo ― Sofware Engineer</title>
+    <meta name="description" content="React, Next.js, TypeScript, Python, AWS and learning about AI/ML and robotics" />
 
     <meta property="og:title" content="Gianfranco Palumbo ― Sofware Engineer" />
-    <meta property="og:description" content="React, Next.js, Redux, TypeScript, Python, AWS  and learning about AI/ML" />
+    <meta
+      property="og:description"
+      content="React, Next.js, Redux, TypeScript, Python, AWS  and learning about AI/ML"
+    />
     <meta property="og:image" content="/icon-192x192.png" />
     <style type="text/css">
       * {
@@ -23,9 +25,8 @@
       body {
         background: #f4f4f4;
         color: #3a3a3a;
-        font-family: -apple-system, system-ui, BlinkMacSystemFont, 
-             'Segoe UI', Roboto, 'Helvetica Neue', 
-             Ubuntu, Arial, sans-serif;
+        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, Arial,
+          sans-serif;
         font-size: 1rem;
         font-style: normal;
         font-weight: 400;
@@ -63,6 +64,10 @@
       .wf-loading {
         visibility: hidden;
       }
+
+      .gif {
+        width: 150px;
+      }
     </style>
     <script type="application/ld+json">
       {
@@ -83,16 +88,19 @@
   <body>
     <section class="section" role="main">
       <div class="section__inner">
-        <header class="section__header">Hola 👋, I'm Gianfranco.</header>
-        <div>Living in Magala, Spain</div>
-<!--         <div>Starting a coding school - <a href="https://escuela.dev">Escuela.dev</a> -->
+        <h1 class="section__header">Ciao 👋, I'm Gianfranco.</h1>
+        <div>Living in Magala, Spain.</div>
+        <!--         <div>Starting a coding school - <a href="https://escuela.dev">Escuela.dev</a> -->
         <div>
-          I work as a Sofware Developer at <a
+          I'm a Sofware Developer contractor at
+          <a
             href="https://cartrawler.com"
             title="CarTrawler - a B2B Car Rental & Mobility Marketplace"
             target="_blank"
             rel="noopener noreferrer"
-          >CarTrawler</a> - a B2B Car Rental & Mobility Marketplace
+            >CarTrawler</a
+          >
+          - a B2B Car Rental & Taxi Marketplace
         </div>
       </div>
     </section>
@@ -122,12 +130,14 @@
         </div>
       </div>
     </section>
-    <!-- <section class="section">
+    <section class="section">
       <div class="section__inner">
-        <header class="section__header">Contact</header>
-        <a href="mailto:hi@gian.cool" title="Email me at hi@gian.cool">hi@gian.cool</a>
+        <h2 class="section__header">Thanks, byeeee</h2>
+        <p>Thanks for stopping by! 🚀🌐</p>
+        <!-- <a href="mailto:hi@gian.cool" title="Email me at hi@gian.cool">hi@gian.cool</a> -->
+        <img src="./bye-okay.gif" class="gif" />
       </div>
-    </section> -->
+    </section>
   </body>
   <!-- Cloudflare Web Analytics -->
   <script
