--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
       .gif {
         width: 150px;
       }
+
+      @media screen and (max-width: 480px) {
+        .gif {
+          width: 80%;
+        }
+      }
     </style>
     <script type="application/ld+json">
       {
@@ -85,11 +91,12 @@
       }
     </script>
   </head>
+
   <body>
     <section class="section" role="main">
       <div class="section__inner">
         <h1 class="section__header">Ciao 👋, I'm Gianfranco.</h1>
-        <div>Living in Magala, Spain.</div>
+
         <!--         <div>Starting a coding school - <a href="https://escuela.dev">Escuela.dev</a> -->
         <div>
           I'm a Sofware Developer contractor at
@@ -100,8 +107,20 @@
             rel="noopener noreferrer"
             >CarTrawler</a
           >
-          - a B2B Car Rental & Taxi Marketplace
+          - a B2B Car Rental & Taxi Marketplace.
+          <p>Living in sunny Magala, Spain 🌞</p>
         </div>
+
+        <p>My <i>core</i> skills:</p>
+        <ul>
+          <li>React</li>
+          <li>Next.js</li>
+          <li>Redux</li>
+          <li>TypeScript</li>
+          <li>Python</li>
+          <li>AWS</li>
+        </ul>
+        <p>And I'm learning about AI/ML and robotics 🤖</p>
       </div>
     </section>
 
@@ -132,7 +151,6 @@
     </section>
     <section class="section">
       <div class="section__inner">
-        <h2 class="section__header">Thanks, byeeee</h2>
         <p>Thanks for stopping by! 🚀🌐</p>
         <!-- <a href="mailto:hi@gian.cool" title="Email me at hi@gian.cool">hi@gian.cool</a> -->
         <img src="./bye-okay.gif" class="gif" />
