--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
     </section>
     <section class="section">
       <div class="section__inner">
+        <h2>My CV</h2>
+
+        <a href="./Gianfranco_Palumbo_CV.html" title="HTML Gianfranco Palumbo CV">Gianfranco_Palumbo_CV.html</a>
+      </div>
+    </section>
+    <section class="section">
+      <div class="section__inner">
         <p>Thanks for stopping by! 🚀🌐</p>
         <!-- <a href="mailto:hi@gian.cool" title="Email me at hi@gian.cool">hi@gian.cool</a> -->
         <img src="./bye-okay.gif" class="gif" />
